:bug: Fix broken layout in some form fields

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -562,6 +562,8 @@
 
 .orientation-icon {
   margin-left: $small;
+  display: flex;
+  align-items: center;
 
   svg {
     cursor: pointer;
